Better links to map location

--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
     <div class="hero">
         <h1>James B. Dudley Academy Yard Sale!</h1>
         <h2>March 23, 2024 <br> 7:00am - 11:00am</h2>
-        <a href="https://www.google.com/maps/place/3420+Wrightsville+Ave,+Wilmington,+NC+28403" target="_blank" title="Click to view address">
+        <a href="https://maps.app.goo.gl/6vd4BmG3zK1nyfQP8" target="_blank" title="Click to view address">
             <h3>3420 Wrightsville Ave, Wilmington, NC 28403</h3>
         </a>
     </div>
@@ -74,5 +74,5 @@
             Add to Calendar
         </a>
     </div>
-    <a class="directions" href="https://www.google.com/maps/place/3420+Wrightsville+Ave,+Wilmington,+NC+28403" target="_blank" title="Click to view address"></a>
+    <a class="directions" href="https://maps.app.goo.gl/6vd4BmG3zK1nyfQP8" target="_blank" title="Click to view address"></a>
 </body>
