--- a/public/index.html
+++ b/public/index.html
@@ -37,6 +37,7 @@
 </head>
 <body>
     <div class="hero">
+        <img src="./favicon.png" alt="JDA Logo" width="150" />
         <h1>James B. Dudley Academy Yard Sale!</h1>
         <h2>March 23, 2024 <br> 7:00am - 11:00am</h2>
         <a href="https://maps.app.goo.gl/6vd4BmG3zK1nyfQP8" target="_blank" title="Click to view address">
