improve photos and qa part

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
 </head>
 <body>
     <div class="hero">
-        <img src="./favicon.png" alt="JDA Logo" width="150" />
+        <img src="/favicon.png" alt="JDA Logo" width="150" />
         <h1>James B. Dudley Academy Yard Sale!</h1>
         <h2>March 23, 2024 <br> 7:00am - 11:00am</h2>
         <a href="https://maps.app.goo.gl/6vd4BmG3zK1nyfQP8" target="_blank" title="Click to view address">
@@ -51,8 +51,14 @@
         </div>
 
         <div>
-            <h4>Can I drop off items?</h4>
-            <p>Yes! We will start collecting items at the following times:</p>
+            <h4>What can I do to help?</h4>
+            <ul>
+                <li>Visit and support our yard sale</li>
+                <li>Share this event on social media</li>
+                <li>Invite your friends and family</li>
+                <li>Drop off items for the yard sale</li>
+            </ul>
+            <p>Collection drop-off times:</p>
             <ul>
                 <li>March 18 - March 21 at 9:30am-11:30am, 1:00pm - 2:30pm, 3:30pm-5:00pm</li>
                 <li>March 22 at 11:30am is final cut off.</li>
@@ -61,7 +67,7 @@
 
         <div>
             <h4>Why are you having a yard sale?</h4>
-            <p>We are expanding access to quality education for our school and students.</p>
+            <p>This fundraiser to support our teachers and our new enrichment building.</p>
         </div>
 
         <div>
