--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
 
         <div>
             <h4>Why are you having a yard sale?</h4>
-            <p>This fundraiser to support our teachers and our new enrichment building.</p>
+            <p>This fundraiser is to support our teachers and our new enrichment building.</p>
         </div>
 
         <div>
