Yard sale -> fundraiser

--- a/public/index.html
+++ b/public/index.html
@@ -53,10 +53,10 @@
         <div>
             <h4>What can I do to help?</h4>
             <ul>
-                <li>Visit and support our yard sale</li>
+                <li>Visit and support our fundraiser</li>
                 <li>Share this event on social media</li>
                 <li>Invite your friends and family</li>
-                <li>Drop off items for the yard sale</li>
+                <li>Drop off donations for the fundraiser</li>
             </ul>
             <p>Collection drop-off times:</p>
             <ul>
@@ -66,7 +66,7 @@
         </div>
 
         <div>
-            <h4>Why are you having a yard sale?</h4>
+            <h4>Why are you having a fundraiser?</h4>
             <p>This fundraiser is to support our teachers and our new enrichment building.</p>
         </div>
 
