Yard sale -> fundraiser

--- a/public/index.html
+++ b/public/index.html
@@ -2,23 +2,23 @@
 <html lang="en">
 
 <head>
-    <title>James B. Dudley Academy Yard Sale!</title>
+    <title>James B. Dudley Academy Fundraiser!</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="March 23, 2024 - 7:00am to 11:00am - 3420 Wrightsville Ave, Wilmington, NC 28403">
-    <meta name="keywords" content="yard sale, yard, sale, garage sale, selling, for sale, toys, games, clothes, good will, salvation army, resell, resale, discount, deals, finds, vintage, classic, rare">
+    <meta name="keywords" content="yard sale, yard, sale, garage sale, fundraiser, selling, for sale, toys, games, clothes, good will, salvation army, resell, resale, discount, deals, finds, vintage, classic, rare">
     <meta name="author" content="James B. Dudley">
-    <meta property="og:site_name" content="James B. Dudley Academy Yard Sale" >
+    <meta property="og:site_name" content="James B. Dudley Academy Fundraiser" >
     <meta name="twitter:domain" property="twitter:domain" content="yardsale.dudleyacademy.org">
-    <meta name="og:title" property="og:title" content="James B. Dudley Academy Yard Sale" >
-    <meta name="twitter:title" property="twitter:title" content="James B. Dudley Academy Yard Sale">
+    <meta name="og:title" property="og:title" content="James B. Dudley Academy Fundraiser" >
+    <meta name="twitter:title" property="twitter:title" content="James B. Dudley Academy Fundraiser">
     <meta property="og:description" content="March 23, 2024 - 7:00am to 11:00am - 3420 Wrightsville Ave, Wilmington, NC 28403">
     <meta name="twitter:description" property="twitter:description" content="March 23, 2024 - 7:00am to 11:00am - 3420 Wrightsville Ave, Wilmington, NC 28403">
     <meta property="og:image" content="https://yardsale.dudleyacademy.org/images/metacard.png" >
     <meta property="twitter:card" content="https://yardsale.dudleyacademy.org/images/metacard.png">
     <meta name="twitter:image:src" property="twitter:image:src" content="https://yardsale.dudleyacademy.org/images/metacard.png">
     <meta name="twitter:image" property="twitter:image" content="https://yardsale.dudleyacademy.org/images/metacard.png">
-    <meta name="og:image:alt" property="og:image:alt" content="James B. Dudley Academy Yard Sale!" >
+    <meta name="og:image:alt" property="og:image:alt" content="James B. Dudley Academy Fundraiser!" >
     <meta property="og:url" content="https://yardsale.dudleyacademy.org" >
     <meta property="og:type" content="website">
 
@@ -38,7 +38,7 @@
 <body>
     <div class="hero">
         <img src="/favicon.png" alt="JDA Logo" width="150" />
-        <h1>James B. Dudley Academy Yard Sale!</h1>
+        <h1>James B. Dudley Academy Fundraiser!</h1>
         <h2>March 23, 2024 <br> 7:00am - 11:00am</h2>
         <a href="https://maps.app.goo.gl/6vd4BmG3zK1nyfQP8" target="_blank" title="Click to view address">
             <h3>3420 Wrightsville Ave, Wilmington, NC 28403</h3>
